feat(ai-suggestion): add AI word suggestion API with OpenAI/Gemini fallback
- add ai-suggestion endpoint and request validation
- implement AI-based dictionary suggestions via ChatClient
- add OpenAI fallback to Gemini strategy
- persist AI token usage statistics from ChatResponse
- add prompt templates for suggestion generation
- refactor usage tracking to use UsageStatisticPort